Send invites layout styling

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_buttons.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_buttons.scss
@@ -331,7 +331,8 @@
 
 	.filter label:before,
 	.feed a:before,
-	.bp-invites-filters  .invite-button span.icons:before,
+        span.icons:before,
+	.bp-invites-filters .invite-button span.icons:before,
 	.bp-messages-filters li a.messages-button:before,
 	.bp-invites-content li .invite-button span.icons:before {
 		font-family: dashicons;
