--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*--------------------------------------------------------------
 Hello, this is the BuddyPress Nouveau stylesheet.
 
@@ -3164,6 +3163,7 @@ body.buddypress.bp-user #page #primary .entry-header {
   display: flex;
   align-items: center;
   flex-flow: row wrap;
+  list-style: none;
   padding: 0;
 }
 
@@ -3195,6 +3195,7 @@ body.groups.group-invites li.select2-results__option.select2-results__invite {
   border-radius: 3px;
   margin-bottom: 0;
   font-size: 14px;
+  list-style: none;
   padding: 2px 5px;
 }
 
@@ -3244,30 +3245,6 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
   margin: 0 8px 0 0;
 }
 
-#send_group_invite_form .select2-selection__choice__remove:before {
-  content: '\E828';
-  font-family: "bb-icons";
-  font-size: 13px;
-  line-height: 1;
-  background: #fff;
-  border-radius: 50%;
-  color: #4D5C6D;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  min-width: 13px;
-  min-height: 13px;
-  text-indent: -1px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 #send_group_invite_form .select2-selection--multiple {
   border-color: transparent;
   padding: 0;
@@ -3309,19 +3286,6 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
   position: relative;
 }
 
-#group-invites-toolbar .dashicons {
-  font: normal normal normal 24px/1 "bb-icons";
-  color: rgba(18, 43, 70, 0.4);
-  -webkit-transition: all linear .2s;
-  transition: all linear .2s;
-  width: auto;
-  height: auto;
-}
-
-#group-invites-toolbar .dashicons-admin-media:before {
-  content: '\E805';
-}
-
 #group-invites-toolbar .post-elements-buttons-item {
   margin-left: 10px;
   position: relative;
@@ -3329,10 +3293,6 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
 
 #bp-group-invite-content .medium-editor-element, #bp-group-invite-content .medium-editor-placeholder {
   font-size: 16px;
-}
-
-#bp-group-invite-content .dashicons-smiley:before {
-  content: '\E811';
 }
 
 div#bp-group-invite-content {
@@ -3426,70 +3386,6 @@ div#bp-group-invite-content {
   border: 0;
 }
 
-#group-invites-container .bb-groups-invites-left .bp-group-invites-filters .button.group-invite-button .dashicons-arrow-left:before {
-  content: "\e87a";
-}
-
-#group-invites-container .bb-groups-invites-left .group-invite-button .dashicons-arrow-left:before {
-  content: "\e87a" !important;
-}
-
-#group-invites-container .bp-invites-filters .button.invite-button .dashicons-arrow-left:before {
-  content: "\e87a";
-}
-
-#group-invites-container .bb-groups-invites-left .bp-group-invites-filters .button.group-invite-button .dashicons-arrow-right:before,
-#group-invites-container .bb-groups-invites-left .bp-group-invites-filters .button.group-invite-button .dashicons-arrow-left:before {
-  content: "\e87b";
-  font-family: 'bb-icons';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  list-style: none;
-  -webkit-font-smoothing: antialiased;
-  color: #939597;
-}
-
-#group-invites-container .bb-groups-invites-left .group-invite-button .dashicons-arrow-right:before,
-#group-invites-container .bb-groups-invites-left .group-invite-button .dashicons-arrow-left:before {
-  content: "\e87b";
-  font-family: 'bb-icons';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  list-style: none;
-  -webkit-font-smoothing: antialiased;
-  color: #939597;
-}
-
-#group-invites-container .bb-groups-invites-left .dashicons-arrow-right:before {
-  content: "\f139";
-}
-
-#group-invites-container .bb-groups-invites-left .dashicons-arrow-left:before {
-  content: "\f141";
-}
-
-.buddypress-wrap ul.item-list li .group-remove-invite-button span.icons:before, .buddypress-wrap ul.item-list li.selected .invite-button span.icons:before {
-  content: "\e8f7";
-  font-family: 'bb-icons';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  list-style: none;
-  -webkit-font-smoothing: antialiased;
-  color: #939597;
-}
-
 .bp-single-invite-wrap.group-invites-highlight {
   background: #fffced;
   padding: 10px;
@@ -3512,31 +3408,17 @@ div#bp-group-invite-content {
 }
 
 #group-invites-container form#send_group_invite_form {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 #group-invites-container .bb-groups-invites-right > .bp-feedback {
-  margin: 20px 20px 20px 20px;
+  margin: 20px;
 }
 
 .bp-single-invite-content .bp-invite-content-wrap p.joined {
   color: #847d7d;
   font-style: italic;
   font-weight: bold;
-}
-
-#group-invites-container .bb-groups-invites-left .group-invites-members-listing #members-list li .item .action button span.icons:before {
-  content: "";
-  font-family: bb-icons;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  color: #939597;
-  font-variant: normal;
-  list-style: none;
 }
 
 #group-invites-container .bb-groups-invites-left .group-invites-members-listing ul#members-list {
@@ -3594,6 +3476,10 @@ div#bp-group-invite-content {
   line-height: 1.5em;
   color: #818078;
   background-color: #FFFFFF;
+}
+
+.group-invites-members-listing .bp-list li .item {
+  overflow: initial;
 }
 
 /*
@@ -5485,6 +5371,7 @@ ul.bbp-stats .bbp-count {
 
 .buddypress-wrap .filter label:before,
 .buddypress-wrap .feed a:before,
+.buddypress-wrap span.icons:before,
 .buddypress-wrap .bp-invites-filters .invite-button span.icons:before,
 .buddypress-wrap .bp-messages-filters li a.messages-button:before,
 .buddypress-wrap .bp-invites-content li .invite-button span.icons:before {
