--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3127,26 +3127,16 @@ body.buddypress.bp-user #page #primary .entry-header {
 }
 
 .bb-groups-invites-left {
-  max-width: 350px;
-  padding: 20px;
   border-left: 1px solid #E7E9EC;
-  min-width: 350px;
+  min-width: 0;
+  flex: 0 0 360px;
 }
 
-.group-invites-members-listing {
-  margin-top: 20px;
+.bb-groups-invites-left .group-invites-search {
+  padding: 20px;
 }
 
-#group-invites-container .bb-groups-invites-left .group-invites-search {
-  margin-top: 20px;
-}
-
-#group-invites-container .bb-groups-invites-left ul.item-list.bp-list.all-members li {
-  border: none !important;
-  padding: 5px 0px 5px 10px !important;
-}
-
-#item-body #group-invites-container .bb-groups-invites-left .group-invites-members-listing .item-list li.selected {
+#item-body #group-invites-container li.selected {
   background: #f5f5f5;
 }
 
@@ -3170,10 +3160,6 @@ body.buddypress.bp-user #page #primary .entry-header {
 #send_group_invite_form .select2-search.select2-search--inline {
   flex: 1;
   min-width: 0;
-}
-
-#send_group_invite_form .select2-selection__rendered li {
-  margin: 0;
 }
 
 #buddypress #send_group_invite_form .select2-search__field {
@@ -3237,12 +3223,20 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
 
 #send_group_invite_form li.select2-selection__choice {
   margin-left: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 #send_group_invite_form .select2-selection__choice__remove {
-  font-size: 0;
   line-height: 1;
   margin: 0 8px 0 0;
+  width: 16px;
+  height: 16px;
+  background: #fff;
+  border-radius: 50%;
+  color: #333;
+  font-size: 14px;
+  text-align: center;
 }
 
 #send_group_invite_form .select2-selection--multiple {
@@ -3260,14 +3254,6 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
 #send_group_invite_form .select2-search.select2-search--inline {
   flex: 1;
   min-width: 0;
-}
-
-#send_group_invite_form .select2-selection__rendered li {
-  margin: 0;
-}
-
-#send_group_invite_form li.select2-selection__choice {
-  margin-left: 10px;
 }
 
 #send_group_invite_form #group-invites-toolbar {
@@ -3295,43 +3281,34 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
   font-size: 16px;
 }
 
-div#bp-group-invite-content {
-  padding: 20px;
+#bp-group-invite-content #send-invites-control {
+  border: 0;
+  resize: none;
+  padding: 25px;
+  min-height: 120px;
+  height: auto;
+  max-height: 32vh;
 }
 
 #group-invites-container .bb-groups-invites-left .group-invites-members-listing .bp-invites-feedback-hide {
   display: none;
 }
 
-#group-invites-container .bb-groups-invites-left .group-invites-members-listing .item-list > li {
-  border-color: #ebe9e6;
-}
-
-#group-invites-container .bb-groups-invites-left .group-invites-members-listing .item-list > li:first-child {
-  border-top: none;
-}
-
-#group-invites-container .bb-groups-invites-left .group-invites-members-listing .item-list li:last-child {
-  border-bottom: none;
-}
-
-#group-invites-container .bb-groups-invites-left .group-invites-members-listing .item-list > li {
-  background-color: #fff;
-  border-bottom: 1px solid #E7E9EC;
-  margin-bottom: -1px;
+#group-invites-container .bb-groups-invites-left .item-list li {
+  border: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-flow: row wrap;
   flex-flow: row wrap;
-  padding: 15px 20px;
   position: relative;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   border-radius: 0;
-  width: 100%;
-  border-top: 1px solid #E7E9EC;
+  margin: 0 -20px 1px;
+  width: auto;
+  padding: 8px 20px;
 }
 
 #group-invites-container .bb-groups-invites-left .group-invites-members-listing .list-title {
@@ -3339,16 +3316,6 @@ div#bp-group-invite-content {
   font-size: 15px;
   margin: 0 auto;
   width: 100%;
-}
-
-#group-invites-container .bb-groups-invites-left .group-invites-members-listing .action {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  position: static;
 }
 
 #group-invites-container .bb-groups-invites-left .group-invites-members-listing .action button {
@@ -3421,9 +3388,15 @@ div#bp-group-invite-content {
   font-weight: bold;
 }
 
-#group-invites-container .bb-groups-invites-left .group-invites-members-listing ul#members-list {
+.group-invites-members-listing {
+  padding-bottom: 20px;
+}
+
+#group-invites-container .bb-groups-invites-left #members-list {
   max-height: 60vh;
   overflow: auto;
+  margin: 0;
+  padding: 0 20px;
 }
 
 .group-invites.pending-invites.invite #group-invites-container .group-invites-column .group-subnav-filters div .last {
@@ -3435,47 +3408,14 @@ div#bp-group-invite-content {
   text-align: center;
 }
 
-#group-invites-container .bb-groups-invites-left .bp-invites-dropdown-options-loader-hide, #group-invites-container .bb-groups-invites-left .group-invites-members-listing .last {
+#group-invites-container .bb-groups-invites-left .bp-invites-dropdown-options-loader-hide,
+#group-invites-container .bb-groups-invites-left .group-invites-members-listing .last {
   display: none;
 }
 
-.bb-groups-invites-left .group-invites-members-listing .bp-invites-feedback, .bb-groups-invites-right #send_group_invite_form .bb-groups-invites-right-top .bp-invites-feedback {
+.bb-groups-invites-left .group-invites-members-listing .bp-invites-feedback,
+.bb-groups-invites-right #send_group_invite_form .bb-groups-invites-right-top .bp-invites-feedback {
   display: none;
-}
-
-.hr-text {
-  line-height: 1em;
-  position: relative;
-  outline: 0;
-  border: 0;
-  color: black;
-  text-align: center;
-  height: 1.5em;
-  opacity: .5;
-  width: 100%;
-  background: transparent;
-  margin: 0;
-}
-
-.hr-text:before {
-  content: '';
-  background: #818078;
-  position: absolute;
-  right: 0;
-  top: 50%;
-  width: 100%;
-  height: 1px;
-}
-
-.hr-text:after {
-  content: attr(data-content);
-  position: relative;
-  display: inline-block;
-  color: black;
-  padding: 0 .5em;
-  line-height: 1.5em;
-  color: #818078;
-  background-color: #FFFFFF;
 }
 
 .group-invites-members-listing .bp-list li .item {
