--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3116,7 +3116,7 @@ body.buddypress.bp-user #page #primary .entry-header {
   background: #fff;
   border: 1px solid #E7E9EC;
   border-radius: 4px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3285,7 +3285,7 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
   border: 0;
   resize: none;
   padding: 25px;
-  min-height: 120px;
+  min-height: 345px;
   height: auto;
   max-height: 32vh;
 }
@@ -3393,7 +3393,7 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
 }
 
 #group-invites-container .bb-groups-invites-left #members-list {
-  max-height: 60vh;
+  max-height: 55vh;
   overflow: auto;
   margin: 0;
   padding: 0 20px;
