--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -610,3 +610,7 @@
     background: #f6f7f8;
     background-size: 800px 104px;
 }
+
+span.dashicons.dashicons-admin-file:before {
+  content: '\e96a';
+}
