--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1908,6 +1908,10 @@ input.search-query-input {
   background-size: 800px 104px;
 }
 
+span.dashicons.dashicons-admin-file:before {
+  content: '\e96a';
+}
+
 /**
 *-----------------------------------------------------
 * @section 3.1.3 - Activity Comments
