--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1720,20 +1720,14 @@ input.search-query-input {
 }
 
 .activity-link-preview-container {
-  border: 1px solid rgba(0, 0, 0, 0.07);
-  border-radius: 4px;
-  background-color: rgba(250, 250, 250, 0.2);
-  margin: 20px 0 10px;
-  overflow: hidden;
-  position: relative;
-  max-width: 420px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
+  padding: 25px;
+  line-height: 1.5;
+  color: #82878c;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  overflow: auto;
+  zoom: 1;
 }
 
 .activity-video-preview .activity-link-preview-container {
@@ -1748,56 +1742,45 @@ input.search-query-input {
   margin-bottom: 0;
 }
 
-.activity-link-preview-image-wrap {
-  flex: 0 0 auto;
-  min-width: 0;
-  width: 180px;
-  min-height: 200px;
-  position: relative;
-}
-
-@media screen and (max-width: 32em) {
-  .activity-link-preview-image-wrap {
-    width: 100%;
-  }
-}
-
 .activity-link-preview-image {
-  border-radius: 3px 0 0 3px;
-  position: relative;
-  overflow: hidden;
-  background: #809ab4;
-  height: 100%;
+  float: left;
+  max-width: 160px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .activity-link-preview-image img {
-  max-width: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  z-index: 0;
-  min-height: 100%;
-  width: auto;
-  min-width: 100%;
-  object-fit: cover;
+  width: 100%;
+  height: auto;
+  border: none;
 }
 
-.activity-link-preview-content {
-  flex: 1;
-  min-width: 0;
-  padding: 40px 20px;
-  font-size: 13px;
-  color: #939597;
-  letter-spacing: -0.24px;
-  line-height: 1.38;
-  align-self: center;
-}
-
-.activity-video-preview .activity-link-preview-content {
+.activity-video-preview {
   padding: 0;
+}
+
+.activity-link-preview-title {
+  margin: 0 0 15px;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 1.3;
+}
+
+.activity-link-preview-title a {
+  color: #32373c;
+}
+
+.activity-link-preview-excerpt p {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.activity-link-preview-excerpt .activity-link-preview-more {
+  color: #b4b9be;
+}
+
+.activity-link-preview-excerpt .activity-link-preview-more:hover {
+  text-decoration: underline;
 }
 
 .activity-url-thumb-nav {
@@ -1838,19 +1821,6 @@ input.search-query-input {
 #activity-url-scrapper-url {
   color: rgba(0, 0, 0, 0.6);
   font-size: 14px;
-}
-
-.activity-link-preview-title {
-  color: #122b46;
-  font-size: 15px;
-  font-weight: 500;
-  letter-spacing: -0.24px;
-  line-height: 1.21;
-  margin: 0 0 10px;
-}
-
-.activity-link-preview-title a {
-  color: inherit;
 }
 
 #activity-close-link-suggestion {
