--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1749,6 +1749,7 @@ input.search-query-input {
   max-width: 160px;
   margin-left: 20px;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .activity-link-preview-image img {
