Fixed - When group layout is set to have Vertical navigation, the whole layout falls apart completely. Fixed - Horizontal navigation style I think could have the tabs on top.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_invites.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_invites.scss
@@ -41,6 +41,8 @@
 	flex-flow: row wrap;
         list-style: none;
 	padding: 0;
+        max-height: 120px;
+        overflow: auto;
 }
 
 #send_group_invite_form .select2-search.select2-search--inline {
@@ -203,13 +205,6 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
 	padding: 0;
 }
 
-#send_group_invite_form .select2-selection__rendered {
-	display: flex;
-	align-items: center;
-	flex-flow: row wrap;
-	padding: 0;
-}
-
 #send_group_invite_form .select2-search.select2-search--inline {
 	flex: 1;
 	min-width: 0;
@@ -246,7 +241,7 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
         border: 0;
         resize: none;
         padding: 25px;
-        min-height: 345px;
+        /*min-height: 350px;*/
         height: auto;
         max-height: 32vh;
     }
@@ -336,8 +331,11 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
 	margin-right: 10px;
 }
 
-#group-invites-container form#send_group_invite_form {
+#group-invites-container #send_group_invite_form {
 	margin-bottom: 0;
+        position: relative;
+        height: 100%;
+        padding-bottom: 55px;
 }
 
 #group-invites-container .bb-groups-invites-right > .bp-feedback {
