added css in scss and grunt run

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_search.scss
@@ -46,6 +46,7 @@
 			text-align: center;
 			text-transform: none;
 			width: 20%;
+			visibility: visible!important;
 
 			span {
 				font-family: dashicons;
